--- a/week1.qmd
+++ b/week1.qmd
@@ -8,7 +8,7 @@
 
 1:00 - 1:30 : Overview of EDS 411, Capstone Project, and DIP
 
-1:30 - 2:00: Client relations workshop with Miya Scheble
+1:30 - 2:00: Client relations workshop - Miya Scheble, Bren School
 
 2:00 - 2:05: BREAK
 
@@ -50,7 +50,7 @@
 
 ☑️ MEDS Capstone Project Guidelines, available at [Bren's Academic Resources webste](https://bren.ucsb.edu/academic-resources-current-students)
 
-☑️ [Sample DIPs]((https://drive.google.com/drive/folders/1i5dkR96C_OOfU57eioQzDL4hi_pso9y8?usp=share_link) )
+☑️ [Sample DIPs](https://docs.google.com/document/d/1Ha9yu6tlQVTt4AXfU6jhWyNS1DvxnwAiTUGgSZkLcyU/edit?usp=share_link)
 
 ☑️ [Ten simple rules to cultivate belonging in collaborative data science research teams](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010567)
 
