added extra slides

--- a/week2.qmd
+++ b/week2.qmd
@@ -2,7 +2,11 @@
 
 ## Materials
 
-[Slides](https://docs.google.com/presentation/d/1RtUrvuHiWcNBjWLnOirpr8nUC3MADrarUUeCkt-W4_8/edit?usp=sharing)
+📕 [Class slides](https://docs.google.com/presentation/d/1RtUrvuHiWcNBjWLnOirpr8nUC3MADrarUUeCkt-W4_8/edit?usp=sharing)
+
+📗 [Computing resources slides](https://docs.google.com/presentation/d/1dO3eNAM37yjKQTQIkV5zbGcYkfb9Yhph1A32mHA4ErY/edit?usp=sharing)
+
+📘 [Conflict resolution workshop slides](https://docs.google.com/presentation/d/1m-n4TNYfoINR7-cy_J6dJPSYLoUaueyZaJ_LjCCyLZ0/edit?usp=sharing)
 
 ## Schedule
 
