added timeline of drafts

--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,9 @@ Office hour: by appointmnet, Zoom or NCEAS classroom
 
 Best way to contact me: e-mail, Slack
 
+## Syllabus
+[Click here to view syllabus.](https://docs.google.com/document/d/17tNj8Ie-FG6Q72tFTo11q7D3K_tOrMH1MbKpsZhnwTI/edit?usp=sharing)
+
 ## Calendar
 The following is our ideal calendar, the course content may be subject to change as the course progresses. 
 
