--- a/week6.qmd
+++ b/week6.qmd
@@ -4,6 +4,8 @@
 
 [Class slides](https://docs.google.com/presentation/d/1kECb3Rui9YLXcOK0MtlnEfAQNBvujUyBVLBofLZnOAE/edit?usp=sharing)
 
+[Faculty Review Logistics - Emily Case](https://docs.google.com/presentation/d/1SS1xtBQEhOVMLV6JcKNH5MXBEe6D4ZmWaeHTKmqhnmE/edit?usp=sharing)
+
 ## Schedule
 
 1:00 - 1:10 : Questions & check-in 
@@ -26,9 +28,10 @@
 ### Prepare faculty review draft slides
 
 1. Read these [guidelines for your presentation](https://docs.google.com/presentation/d/1rMpHTbqVPNEDBZc_o8asS2wf_RsBU7IXkBNN91qx2SA/edit?usp=sharing).
-2. Put together a skeleton slide deck (like an outline, but with the sections as slide headers) and populate them with stuff you have already. Focus on storyline! *Slides must be Google slides. 
-3. Decide on who will be presenting in faculty review (and who in public final presentation). Every person in the team should be ready to present if needed.
-4. Add your draft to our [shared drive](https://drive.google.com/drive/folders/1P-kO4Btnb0-vWJPiP5zxzRnpfOHS762P?usp=share_link).
+2. Decide with your team what preliminary results, progress, or prototype you will include in your presentation
+3. Put together a skeleton slide deck (like an outline, but with the sections as slide headers) and populate them with stuff you have already. Focus on storyline! Consider discussing this outline with your faculty advisor. *Slides must be Google slides. 
+4. Decide on who will be presenting in faculty review (and who in public final presentation). Every person in the team should be ready to present if needed.
+5. Add your draft to our [shared drive](https://drive.google.com/drive/folders/1P-kO4Btnb0-vWJPiP5zxzRnpfOHS762P?usp=share_link).
 
 ### Prepare to present next week
 
