added Alex's slides

--- a/week6.qmd
+++ b/week6.qmd
@@ -6,6 +6,8 @@
 
 [Faculty Review Logistics - Emily Case](https://docs.google.com/presentation/d/1SS1xtBQEhOVMLV6JcKNH5MXBEe6D4ZmWaeHTKmqhnmE/edit?usp=sharing)
 
+[Ten Ways to Improve Presentations - Alex Phillips, PhD](https://docs.google.com/presentation/d/1z9URIEa5Ex7FtDcTMTPbQrWO7mD8XHhdzlKLZzXhfEQ/edit#slide=id.g2b923656a78_0_20)
+
 ## Schedule
 
 1:00 - 1:10 : Questions & check-in 
