--- a/resources.qmd
+++ b/resources.qmd
@@ -10,8 +10,8 @@ Available for download at [Bren's Academic Resources webste](https://bren.ucsb.e
 
 [Schedule](https://docs.google.com/document/d/13rNpK38MZSpTbZVxK5n2d2VGZptAqtR_7c0Ekvvup_E/edit?usp=sharing)
 
-## 2024 MEDS Capstone Faculty Review Evaluation
-[Rubric](https://docs.google.com/document/d/13rNpK38MZSpTbZVxK5n2d2VGZptAqtR_7c0Ekvvup_E/edit?usp=sharing)
+## 2024 MEDS Capstone Faculty Review Rubric
+[Rubric](https://docs.google.com/document/d/1Rx8zHqRvHuzLxQxEmjBns4Jvs_A_tt2hiDnw8VPYNhY/edit?usp=sharing)
 
 ## Example Design and Implementation Plans
 
