--- a/411a_winter/411a_resources.qmd
+++ b/411a_winter/411a_resources.qmd
@@ -1,8 +1,20 @@
-# Resources
+# 411A Resources
 
 ## Winter Quarter Deadlines
 
 ![](/images/winter_deadlines.png)
+
+## Capstone Process Documents
+
+📑 Capstone Project Guidelines MEDS 2024. Available for download at [Bren's Academic Resources website](https://bren.ucsb.edu/academic-resources-current-students).
+
+[🛟 Capstone help "order of operations"](https://drive.google.com/file/d/1W699qeRlQOw_wQCJg0eAMziwCNrvQ7Ur/view?usp=share_link) (only available to EDS 411 students). 
+
+## UCSB Library Research Data Services
+
+[🆗 Good enough practices to manage your project.](https://ucsb-library-research-data-services.github.io/project-data-management/)
+
+📨 Contact RDS at: rds@library.ucsb.edu
 
 ## Faculty Review Resources
 
@@ -45,9 +57,3 @@
 1. Revisit timeline, milestones, and software & tools to include testing
 
 2. See PROJECT BUDGET and DIP Budget and Budget Justification sections in Capstone Guidelines
-
-## UCSB Library Research Data Services
-
-[🆗 Good enough practices to manage your project.](https://ucsb-library-research-data-services.github.io/project-data-management/)
-
-📨 Contact RDS at: rds@library.ucsb.edu
