updates after week1 class

--- a/411b_spring/411b_overview.qmd
+++ b/411b_spring/411b_overview.qmd
@@ -21,7 +21,7 @@ Pronouns: she/her/hers
 
 E-mail: c_galazgarcia@ucsb.edu
 
-Office hour: by appointmnet, Zoom or NCEAS classroom
+Office hour: by appointment, Zoom or NCEAS classroom
 
 Best way to contact me: e-mail, Slack
 
@@ -33,7 +33,7 @@ Pronouns: she/her/hers
 
 E-mail: acaughman@bren.ucsb.edu
 
-Office hours: [please schedule through calendar](https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2x_X7IUZE2AkG7rEEWSzVia5Dcz4yyOnSvqc6ULvrm2XSi-AHF7zOQJEcZBUJ-PpnAFH3ZjVZy)
+Office hours: At Bren's Manzanita room (4329), [please schedule through calendar](https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2x_X7IUZE2AkG7rEEWSzVia5Dcz4yyOnSvqc6ULvrm2XSi-AHF7zOQJEcZBUJ-PpnAFH3ZjVZy)
 
 Best way to contact me: Slack
 
