--- a/411b_spring/411b_resources.qmd
+++ b/411b_spring/411b_resources.qmd
@@ -4,6 +4,13 @@
 
 ![](/images/411b_spring/spring_deadlines.png)
 
+## TA Office Hours
+
+🗓️ [Schedule time during Allie's office hours.](https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2x_X7IUZE2AkG7rEEWSzVia5Dcz4yyOnSvqc6ULvrm2XSi-AHF7zOQJEcZBUJ-PpnAFH3ZjVZy)
+
+🤔 [Fill out this form with information about your questions](https://forms.gle/pqBX3BCVj5RVpCeZ8)
+
+
 ## Capstone Process Documents
 
 📑 Capstone Project Guidelines MEDS 2024. Available for download at [Bren's Academic Resources website](https://bren.ucsb.edu/academic-resources-current-students).
