--- a/411b_spring/411b_week3.qmd
+++ b/411b_spring/411b_week3.qmd
@@ -18,7 +18,7 @@
 
 ## Upcoming deadlines
 
-![](/images/411b_spring/upcpming_deadlines_1.png)
+![](/images/411b_spring/upcoming_deadlines_1.png)
 
 ## To do by next week
 
@@ -46,3 +46,12 @@ Add your document to our [shared folder Week 3 - TD Outline submission](https://
 You can continue working on the [week 3 shared folder](https://drive.google.com/drive/folders/1Z6TLkg-sKhZY4OsgOwCetiy-iUw16UPh?usp=share_link) for your final outline submission.
 
 
+### Schedule 1-1 meeting
+
+Please [book a time to meet in my calendar](https://calendar.app.google/mCbNnR37KzcJRvmX9).
+
+**What:** a short (~10 minute) meetings with each of you to check how things are going. My goal is to provide feedback and guidance and identify any issues early on.
+
+**When:** Week 6, April 29 - May 2
+
+**Where:** Monday & Wednesday @ NCEAS, Tuesday & Thursday @ Bren 
