--- a/411b_spring/411b_resources.qmd
+++ b/411b_spring/411b_resources.qmd
@@ -4,6 +4,10 @@
 
 ![](/images/411b_spring/spring_deadlines.png)
 
+## Final Presentations
+
+🌟 [Final presentations schedule](https://docs.google.com/document/d/10By4DB4wI1QEZHAAeBqAmhyWhcai15a00OtMAQdD6EM/edit?usp=sharing)
+
 ## TA Office Hours
 
 🗓️ [Schedule time during Allie's office hours.](https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2x_X7IUZE2AkG7rEEWSzVia5Dcz4yyOnSvqc6ULvrm2XSi-AHF7zOQJEcZBUJ-PpnAFH3ZjVZy)
