--- a/411b_spring/411b_week6.qmd
+++ b/411b_spring/411b_week6.qmd
@@ -63,6 +63,6 @@ Remember every person in the team should be ready to present if needed.
 4. Discuss your draft slides with your faculty advisor. 
 5. Add your draft to our [shared drive](https://drive.google.com/drive/folders/1r6m7zGLLth8-acQr_5BUK9XeWK6lyUHX?usp=share_link) and be ready to do present next week! 
 
-## Schedule for next Class
+## Schedule for next class
 
-![](/images/presentations1.png)
+![](/images/411b_spring/mocks1.png)
